
syntax = "proto3";

option go_package = "berty.tech/go/pkg/bertyprotocol";

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Device {
  bytes device_pub_key = 1;
  bytes account_pub_key = 2;
}

message SigChainEntry {
  enum SigChainEntryType {
    SigChainEntryTypeUndefined = 0;
    SigChainEntryTypeInitChain = 1;
    SigChainEntryTypeAddKey    = 2;
    SigChainEntryTypeRemoveKey = 3;
  }

  bytes entry_hash = 1;
  SigChainEntryType entry_type_code = 2;
  bytes parent_entry_hash = 3;
  google.protobuf.Timestamp created_at = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp expiring_at = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  bytes signer_public_key_bytes = 6;
  bytes subject_public_key_bytes = 7;
  bytes signature = 8;
}
message SigChain {
  bytes id = 1 [(gogoproto.customname) = "ID"];
  repeated SigChainEntry entries = 2;
}

message Contact {
  enum ContactStatus {
    Unknown = 0;
    Myself = 1;
    Contact = 2;
    Trusted = 3;
    Blocked = 4;
    RequestIn = 5;
    RequestOut = 6;
  }

  // AccountID = sig_chain.entries[0].pub_key
  SigChain sig_chain = 1;
  bytes metadata = 2; // Display name, profile picture etc.
  bytes rendezvous_point_seed = 3;
  bytes shared_secret = 4;
  ContactStatus contact_status = 5;
}

message AccountConfig {
  bool rendezvous_point_enabled = 1;
}

message DeviceConfig {
  // ... net config
}
